Document response status code 500 - Internal Server Error
